Refactoring + readme file added